fix: layout bug

--- a/src/Modules/Pages/SplashScreen/index.css
+++ b/src/Modules/Pages/SplashScreen/index.css
@@ -1,10 +1,10 @@
 .splash-screen-wrapper {
     height: auto;
-    padding: 40px;
     background-color: #fff;
+    padding: 40px 20em;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
     .splash-screen-wrapper {
         padding: 20px;
     }
